--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,3 +1,1 @@
-<button mat-icon-button (click)="toggleDarkMode()">
-  <mat-icon>{{ isDarkMode ? 'light_mode' : 'dark_mode' }}</mat-icon>
-</button>
+<app-header></app-header>
