feat: implement shop component with product listing and pagination

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,6 +2,6 @@
   <span>Sports Store</span>
   <span class="spacer"></span>
   <button mat-icon-button (click)="toggleDarkMode()" aria-label="Toggle dark mode">
-    <mat-icon>{{ isDarkMode ? 'light_mode' : 'dark_mode' }}</mat-icon>
+    <mat-icon>{{ isDarkMode() ? 'light_mode' : 'dark_mode' }}</mat-icon>
   </button>
 </mat-toolbar>
