--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,10 +21,13 @@ html {
   color-scheme: dark;
 }
 
+* {
+  transition: all 0.3s ease;
+}
+
 body {
   margin: 0;
   height: 100%;
   background-color: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
-  transition: all 0.3s ease;
 }
