feat: implement shopping cart functionality with routing and cart summary

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -38,7 +38,9 @@
           {{ product.description }}
         </p>
         <div class="product-actions">
-          <button mat-raised-button color="accent">Add To Cart</button>
+          <button mat-raised-button color="accent" (click)="addProductToCart(product)">
+            Add To Cart
+          </button>
         </div>
       </div>
     }
