--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,7 +1,16 @@
-.spacer {
-  flex: 1 1 auto;
-}
-
 .header-toolbar {
-  margin-bottom: 20px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  gap: 8px;
+
+  .title {
+    cursor: pointer;
+  }
+
+  .spacer {
+    flex: 1 1 auto;
+  }
 }
