feat: add admin panel with authentication and order management components

--- a/src/app/shop/shop.component.html
+++ b/src/app/shop/shop.component.html
@@ -23,6 +23,14 @@
         </mat-list-option>
       }
     </mat-selection-list>
+    <mat-divider></mat-divider>
+
+    <div class="admin-link-container">
+      <button mat-button color="warn" routerLink="/admin" class="full-width">
+        <mat-icon>admin_panel_settings</mat-icon>
+        Admin Panel
+      </button>
+    </div>
   </aside>
 
   <main class="products-area">
